# xgc

./: .clang-format  .gitignore  CMakeLists.txt
bench/: README.md  alloc_small.c  old_to_young_writes.c
cmake/: benchmarks.cmake  compiler-options.cmake  debug.cmake  examples.cmake  format.cmake  install.cmake  sanitizer.cmake  tests.cmake
docs/: xgc-v1.2-实现蓝图.md  xgc-v2.0-架构蓝图.md  xgc-v2.1-实现线路图.md  通用高性能混合GC.md
docs/superpowers/plans/: 2026-06-01-xgc-framework.md  2026-06-02-xgc-algorithm-refactor.md
docs/superpowers/specs/: 2026-06-01-xgc-framework-design.md  2026-06-02-xgc-algorithm-refactor-design.md
examples/: README.md  gen_copy_ms_demo.c  marksweep_demo.c
include/xgc/: gc.h  gc_algorithm.h  gc_config.h  gc_types.h
src/: gc_alloc.c  gc_assign.c  gc_atomic.c  gc_epoch.c  gc_internal.h  gc_purple.c  gc_reclaim.c  gc_ring.c  gc_worklist.c
src/algo/: INTERFACE.md
src/algo/bacon-rajan/: gc_alloc.c  gc_assign.c  gc_collect.c  gc_safepoint.c
src/algo/gen_copy_ms/: young_copy.c
src/algo/marksweep/: ms.c
src/core/: barrier.c  bitmap.c  card_table.c  descriptor.c  epoch.c  heap.c  invariants.c  purple.c  reclaim.c  ring.c  runtime.c  worklist.c
tests/: test_barrier_substrate.c  test_bitmap_substrate.c  test_card_table_substrate.c  test_descriptor_substrate.c  test_gen_copy_ms_smoke.c  test_heap_substrate.c  test_marksweep_smoke.c  test_reclaim_substrate.c  test_runtime_invariants_substrate.c  test_worklist_substrate.c
